# StrategyGame

./: CMakeLists.txt
lib/core/: Building.h  District.cpp  District.h  Pop.cpp  Pop.h  Population.cpp  Population.h  Settlement.cpp  Settlement.h
lib/utils/: DataType.h
lib/utils/scenesComponents/: Button.hpp  Component.cpp  Component.h  Component.hpp  Container.hpp  ContainerH.hpp
lib/utils/scenesUtils/: Widget.cpp  Widget.h
src/: AppContext.hpp  Config.hpp  ResourceManager.hpp  main.cpp
